--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
         </div>
         <div class="calculator">
             <h2>Finance Calculators</h2>
-            <div id="FinanceCal" class="btn-container">
+            <div id="HomeimpCal" class="btn-container">
+                <a href="./HomeImprovementCals/PaintCal.html">Paint Cal Beta</a>
             </div>
         </div>
         <!-- <div class="calculator">
