Paint Cal 2 Beta version relesed and Ui updated

--- a/HomeImprovementCals/PaintCal.html
+++ b/HomeImprovementCals/PaintCal.html
@@ -41,7 +41,7 @@
 <body class="bg-gray-900 text-white">
 
     <div class="container mx-auto p-4">
-        <h1 class="text-2xl font-bold mb-4">Advanced Paint Calculator</h1>
+        <h1 class="text-2xl font-bold mb-4 text-center">Advanced Paint Calculator</h1>
 
         <div id="instructions" class="bg-red-100 text-red-700 p-4 mb-4 rounded-lg">
             <h2 class="text-xl font-semibold mb-2">Note:</h2>
@@ -111,6 +111,9 @@
         </div>
 
         <canvas id="renderCanvas" class="bg-gray-700 rounded-lg mt-4"></canvas>
+        <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
+        <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
+        <h6 class="text-center mt-2">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
     </div>
 
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
