--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
         </div>
         <div class="calculator">
             <h2>Finance Calculators</h2>
+            <div id="FinanceCal" class="btn-container">
+            </div>
+        </div>
+        <div class="calculator">
+            <h2>Home Improvement Cal</h2>
             <div id="HomeimpCal" class="btn-container">
                 <a href="./HomeImprovementCals/PaintCal.html">Paint Cal Beta</a>
             </div>
