Percentage Calculator Added

--- a/index.html
+++ b/index.html
@@ -126,9 +126,14 @@
         <div class="calculator">
             <h2>Home Improvement Cal</h2>
             <div id="HomeimpCal" class="btn-container">
-                <a href="./HomeImprovementCals/PaintCal.html">Paint Cal Beta</a>
             </div>
         </div>
+        <div class="calculator">
+            <h2>Education Calculators</h2>
+            <div id="EducationCal" class="btn-container">
+            </div>
+        </div>
+        <a href=""></a>
         <!-- <div class="calculator">
             <h2>Home Improvement Cal</h2>
             <div id="FinanceCal" class="btn-container">
