Body Fat Percentage Calculator are added and ready to link the main page

--- a/FitnessCalculators/BodyFatPercentage.html
+++ b/FitnessCalculators/BodyFatPercentage.html
@@ -11,8 +11,18 @@
 <body class="bg-gray-900 text-white p-8">
 
     <div class="max-w-3xl mx-auto">
-        <h1 class="text-3xl font-bold mb-4">Body Fat Percentage Calculator</h1>
+        <h1 class="text-3xl font-bold mb-4 text-center">Body Fat Percentage Calculator</h1>
 
+        <div class="flex items-center justify-between mt-4 mb-4">
+            <figure>
+                <img class="w-28 rounded-lg" src="./../Source Images/NeckCircumference-demo.png" alt="">
+                <figcaption class="text-sm mt-2">Neck Circumference</figcaption>
+            </figure>
+            <figure>
+                <img class="w-28 rounded-lg" src="./../Source Images/Waist-Circumference-demo-2.jpg" alt="">
+                <figcaption class="text-sm mt-2">Waist Circumference</figcaption>
+            </figure>
+        </div>
         <div class="mb-8">
             <label for="gender" class="block mb-2">Gender:</label>
             <select id="gender" class="block w-full px-3 py-2 rounded bg-gray-800">
@@ -178,6 +188,9 @@
             </ul>
         </div>
     </div>
+    <h6 class="text-center mt-4"><a href="./../index.html" class="text-purple-400 text-2xl font-bold">Home</a></h6>
+    <h5 class="text-center mt-8">Designed and Developed by Sourav Chhimpa</h5>
+    <h6 class="text-center mt-2 mb-6">Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank" class="text-purple-400">@sourav-chhimpa</a></h6> 
     <script src="BodyFatPercentage.js"></script>
 </body>
 </html>
