--- a/index.html
+++ b/index.html
@@ -133,6 +133,11 @@
             <div id="EducationCal" class="btn-container">
             </div>
         </div>
+        <div class="calculator">
+            <h2>Fitness Calculators</h2>
+            <div id="FitnessCal" class="btn-container">
+            </div>
+        </div>
         <!-- <div class="calculator">
             <h2>Home Improvement Cal</h2>
             <div id="FinanceCal" class="btn-container">
