Maintenance Cost Calculator Added to the main  page

--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@
             <div id="FitnessCal" class="btn-container">
             </div>
         </div>
+        <div class="calculator">
+            <h2>Automotive Calculators</h2>
+            <div id="AutomotiveCal" class="btn-container">
+            </div>
+        </div>
+        <a href=""></a>
         <!-- <div class="calculator">
             <h2>Home Improvement Cal</h2>
             <div id="FinanceCal" class="btn-container">
