Guest List Calculator Linked to the main page

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
             <div id="AutomotiveCal" class="btn-container">
             </div>
         </div>
+        <div class="calculator">
+            <h2>Event Planning Calculators</h2>
+            <div id="EventPlanneCal" class="btn-container">
+            </div>
+        </div>
+        <a href=""></a>
         <!-- <div class="calculator">
             <h2>Home Improvement Cal</h2>
             <div id="FinanceCal" class="btn-container">
