--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="twitter:description" content="A tool to calculate vegetable prices, recipe costs, and more. Updated regularly with new features.">
     <meta name="twitter:image" content="Source Images/index img.png">
     <meta name="twitter:creator" content="@sourav-chhimpa">
-        
+    <meta name="google-site-verification" content="0ZxAItq6gbeMHCFKpor4G_6b2SYrEI8S2m_1hosHEDU" />
     <title>Veggie Smart</title>
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
