Roblots.xml and Sitemap.xml added

--- a/index.html
+++ b/index.html
@@ -159,6 +159,33 @@
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
+    <!-- <footer style="display: flex; margin-bottom: 40px; align-items: center; justify-content: space-evenly; flex-wrap: wrap;">
+        <div style="width: 350px; margin: 0 auto; text-align: center;">
+            <h1 style="font-size: larger;">Veggie Smart</h1>
+            <p style="font-size: smaller; color: gray;">Made with 🩷 By Sourav</p>
+            <div style="max-width: 200px; margin: 0 auto; display: inline-block; margin: 10px 0px 10px 0px;">
+                <a href="">
+                    <i class="ri-github-line" style="margin-right: 20px; color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"></i>
+                </a>
+                <a href="">
+                    <i class="ri-twitter-x-line" style="margin-right: 20px; color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"></i>
+                </a>
+                <a href="">
+                    <i class="ri-instagram-line" style="color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"></i>
+                </a>
+            </div>
+            <!-- <p style="font-size: smaller; color: gray;">2024 Veggie Smart. All Rights Reserved</p> 
+        </div>
+        <div style="display: flex; width: 400px; background: rgba(0, 0, 0, 0.292); margin: 0 auto; text-align: center; border-radius: 8px;">
+           <div>
+            <p style="color: white; text-align: center;">Sourav</p>
+            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
+            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
+            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
+            <a style="display: block; margin-top: 5px; text-align: left; margin-left: 30px;" href="">About Us</a>
+           </div>
+        </div>
+    </footer> -->
     <script src="./scripts/scripts.js"></script>
     <script src="./scripts/linksadd.js"></script>
 </body>
