--- a/index.html
+++ b/index.html
@@ -142,20 +142,6 @@
             <div id="FoodCalculators" class="btn-container">
             </div>
         </div>
-        <!-- <div class="calculator">
-            <h2>Home Improvement Cal</h2>
-            <div id="FinanceCal" class="btn-container">
-            </div>
-        </div> -->
-        <!-- <div class="calculator">
-            <h2>Other Calculators</h2>
-            <div>
-                <h5><a href="./Offers Cal/OffersCal.html"><span class="tagname">New</span> Discount Calculator</a></h5>
-                <h5><a href="./NutritionCal/NutritionCal.html"><span class="tagname">Beta</span> Nutrition Calculator</a></h5>
-                <h5><a href="./Recipe Cost Calculator/RecipeCostCalculator.html"><span class="tagname">Beta</span> Recipe Cost Calculator</a></h5>
-                <h5><a href="./Land Measurement Calculator/LandMeasurementCalculator.html"><span class="tagname">Beta</span> Land Measurement Tool</a></h5>
-            </div>                
-        </div> -->
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
@@ -174,7 +160,7 @@
                     <i class="ri-instagram-line" style="color: white; font-size: x-large; padding: 5px; background:rgba(128, 128, 128, 0.342);border-radius: 8px;"></i>
                 </a>
             </div>
-            <!-- <p style="font-size: smaller; color: gray;">2024 Veggie Smart. All Rights Reserved</p> 
+            <p style="font-size: smaller; color: gray;">2024 Veggie Smart. All Rights Reserved</p> 
         </div>
         <div style="display: flex; width: 400px; background: rgba(0, 0, 0, 0.292); margin: 0 auto; text-align: center; border-radius: 8px;">
            <div>
