Calculate Price per Kg Bug Fixed

--- a/MarketCal/Calculate-Price-Kg.html
+++ b/MarketCal/Calculate-Price-Kg.html
@@ -30,8 +30,34 @@
                 <h2>Home</h2>             
             </div>
         </a>
+        <div id="documentation" class="documentation" style="margin: 10px; padding: 20px; border-radius: 12px; border: 1px solid #ddd;">
+            <h2>User Documentation for "Calculate Price per Kg" Calculator</h2>
+            <h3>Overview</h3>
+            <p>The "Calculate Price per Kg" calculator is a user-friendly tool designed to help you determine the price per kilogram of any product based on the total quantity (in kilograms and grams) and the total price. This tool is especially useful for shoppers, sellers, and anyone needing to convert bulk prices into a per-kilogram rate.</p>
+            <h3>Features</h3>
+            <ul>
+                <li>Input fields for total quantity in kilograms and grams.</li>
+                <li>Input field for total price in ₹.</li>
+                <li>Displays the calculated price per kilogram.</li>
+                <li>Clean and responsive design using Tailwind CSS classes.</li>
+            </ul>
+            <h3>How to Use the Calculator</h3>
+            <h4>Open the Calculator Page</h4>
+            <p>Navigate to the calculator page in your browser.</p>
+            <h4>Input Total Quantity in Kilograms</h4>
+            <p>Locate the input field labeled "Total Quantity (kg):". Enter the total quantity in kilograms in this field.</p>
+            <h4>Input Total Quantity in Grams</h4>
+            <p>Locate the input field labeled "Total Quantity (g):". Enter the total quantity in grams in this field.</p>
+            <h4>Input Total Price in ₹</h4>
+            <p>Locate the input field labeled "Total Price (₹):". Enter the total price in ₹ in this field.</p>
+            <h4>Calculate the Price per Kilogram</h4>
+            <p>Click the "Calculate Price per Kg" button. The calculator will process the inputs and display the price per kilogram in the result area.</p>
+            <h4>View the Result</h4>
+            <p>The price per kilogram will be displayed below the form in the result area.</p>
+        </div>
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
+    </div>
     </div>
 </body>
 <script src="./../scripts/scripts.js"></script>
