Calculate Quantity Bug fixed and UI Updated

--- a/MarketCal/Calculate-Quantity.html
+++ b/MarketCal/Calculate-Quantity.html
@@ -28,6 +28,29 @@
                 <h2>Home</h2>             
             </div>
         </a>
+        <div id="documentation" class="documentation" style="margin: 10px; padding: 20px; border: 1px solid #ddd; border-radius: 12px;">
+            <h2>User Documentation for "Calculate Quantity" Calculator</h2>
+            <h3>Overview</h3>
+            <p>The "Calculate Quantity" calculator is a simple yet effective tool designed to help you determine the quantity of a product you can buy based on the price per kilogram and the amount you wish to spend. This tool is particularly useful for budgeting and shopping.</p>
+            <h3>Features</h3>
+            <ul>
+                <li>Input field for the price per kilogram (₹/kg).</li>
+                <li>Input field for the amount you wish to spend (₹).</li>
+                <li>Displays the calculated quantity in kilograms.</li>
+                <li>Clean and responsive design using Tailwind CSS classes.</li>
+            </ul>
+            <h3>How to Use the Calculator</h3>
+            <h4>Open the Calculator Page</h4>
+            <p>Navigate to the calculator page in your browser.</p>
+            <h4>Input the Price per Kilogram</h4>
+            <p>Locate the input field labeled "Price (₹/kg):". Enter the price per kilogram of the product in this field.</p>
+            <h4>Input the Amount to Spend</h4>
+            <p>Locate the input field labeled "Amount to Spend (₹):". Enter the total amount you wish to spend in this field.</p>
+            <h4>Calculate the Quantity</h4>
+            <p>Click the "Calculate Quantity" button. The calculator will process the inputs and display the quantity of the product you can buy in the result area.</p>
+            <h4>View the Result</h4>
+            <p>The calculated quantity will be displayed below the form in the result area.</p>
+        </div>
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
