Calculate Total Price UI and Bug Fixed

--- a/MarketCal/Calculate-Total-Price.html
+++ b/MarketCal/Calculate-Total-Price.html
@@ -30,6 +30,29 @@
                 <h2>Home</h2>             
             </div>
         </a>
+        <div id="documentation" class="documentation" style="margin: 20px; padding: 20px; background-color: #f9f9f9; border: 1px solid #ddd;">
+            <h2>User Documentation for "Calculate Total Price" Calculator</h2>
+            <h3>Overview</h3>
+            <p>The "Calculate Total Price" calculator helps you determine the total price of a product based on its price per kilogram and the quantity (in kilograms and grams) you wish to purchase.</p>
+            <h3>Features</h3>
+            <ul>
+                <li>Input field for the price per kilogram (₹/kg).</li>
+                <li>Input fields for entering quantity in kilograms and grams.</li>
+                <li>Displays the calculated total price.</li>
+                <li>Clean and responsive design using Tailwind CSS classes.</li>
+            </ul>
+            <h3>How to Use the Calculator</h3>
+            <h4>Open the Calculator Page</h4>
+            <p>Navigate to the calculator page in your browser.</p>
+            <h4>Input the Price per Kilogram</h4>
+            <p>Locate the input field labeled "Price (₹/kg):". Enter the price per kilogram of the product.</p>
+            <h4>Input the Quantity</h4>
+            <p>Locate the input fields labeled "Quantity (kg):" and "Quantity (g):". Enter the total quantity you wish to purchase in kilograms and grams.</p>
+            <h4>Calculate the Total Price</h4>
+            <p>Click the "Calculate Total" button. The calculator will process the inputs and display the total price in the result area.</p>
+            <h4>View the Result</h4>
+            <p>The calculated total price will be displayed below the form in the result area.</p>
+        </div>
         <h5>Designed and Developed by Sourav Chhimpa</h5>
         <h6>Insta: <a href="https://www.instagram.com/sourav-chhimpa/" target="_blank">@sourav-chhimpa</a></h6>
     </div>
